--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<h1></h1>
+<h1>Is torture ever acceptable </h1>
+<h2>Sean Reidy</h2>
+<p>Torture is not acceptable. As stated in the Geneva Conventions of 1949 "Persons taking no active part in the hostilities, including members of armed forces who have laid down their arms and those placed hors de combat by sickness, wounds, detention, or any other cause, shall in all circumstances be treated humanely, without any adverse distinction founded on race, colour, religion or faith, sex, birth or wealth, or any other similar criteria.
+To this end, the following acts are and shall remain prohibited at any time and in any place whatsoever with respect to the above-mentioned persons:
+(a) violence to life and person, in particular murder of all kinds, mutilation, cruel treatment and torture;
+(b) taking of hostages;
+(c) outrages upon personal dignity, in particular humiliating and degrading treatment;
+(d) the passing of sentences and the carrying out of executions without previous judgement pronounced by a regularly constituted court, affording all the judicial guarantees which are recognized as indispensable by civilized peoples." </p>
 
 </body>
 </html>
