--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ To this end, the following acts are and shall remain prohibited at any time and 
 (a) violence to life and person, in particular murder of all kinds, mutilation, cruel treatment and torture;
 (b) taking of hostages;
 (c) outrages upon personal dignity, in particular humiliating and degrading treatment;
-(d) the passing of sentences and the carrying out of executions without previous judgement pronounced by a regularly constituted court, affording all the judicial guarantees which are recognized as indispensable by civilized peoples." </p>
+(d) the passing of sentences and the carrying out of executions without previous judgement pronounced by a regularly constituted court, affording all the judicial guarantees which are recognized as indispensable by civilized peoples.".
+ 
+
+ while this was made in 1949 the chivalric code (an informal, varying code of conduct) states "Thou shalt believe all that the Church teaches and thou shalt observe all its directions." as torture is banned by the Bible "You shall not murder.". 
+ 	With these in mind it is clear that torture is never acceptable   </p>
+<img src="images/thTFPXFT95.jpg"> 
 
 </body>
 </html>
