--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Is torture ever acceptable</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
