My side of the argument

--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<h1></h1>
-<H6></H6>
-
+<h1>Is Torture ever acceptable</h1>
+<h2>Alexis Oulds Argument</h2>
+<br><br><<br><br>
+	<p>
+		When it comes to torture the subject can be rather hard to delve into simply due to the fact that different people have different views on what is and isn't defined as torture. To try and simplify this, I will reffer to it as any action or lack of action carried out with the intention of causing any kind of negative effect on the victim, just to go with a broad term.
+	</p>
+<br><br><<br><br>
+	<p>
+		With this method of terming the subject, the question can change from "Is Torture ever acceptable" to, what kind of torture could be considered as humane and thus acceptable. We also still need to ask the question, what is this method being used to gain?
+	</p>
+<br><br><br><br>
+	<p>
+		First, there are a few different types of "torture" that should be outlined.
+	<ol>
+		<li>Physical</li>
+		<li>Psychological</li>
+		<li>Emotional</li>
+	</ol>
+		As could probably be gathered from the discriptions, physical torture involves actually causing harm to the subjects body. It is in this form of torture most assosiate the entire concept with and is without doubt far from acceptable. The other two types which are very similar in many ways and yet different, can be considered closer to the grey line of morality.
+	</p>
+<br><br><br><br>
+	<p>
+		When it comes to psychological and emotional torture, the line of right and wrong can become more grey. The two really are a hard subject to tackle. By far the greater evil of these two is emotional torture, as it is the most likely to have lasting effects, but when done correctly, human emotions can be played upon to coax information or compliance from the subject. Psychological torture however can also effect the mind, however is best implimented by playing on human fears, morality, and perception.
+	</p>
+<br><br><br><br>
+	<p>
+		Let's use an example; one form of torture is actually used even today, however sparingly and is considered punishment rather than torture legaly. This method is easily known as Solitary Confinement, reserved for the most deprived of criminals. However, while considered a punishment, this is in fact a form of torture that can easily be the most damaging to any human, as prolonged Solitary Confinement can lead to mental health issues including psychotic breaks. As humans are a social species, we require interaction, yet we disguise this blatant torture as punishment. This "punishment" can easily induce insanity. Another, not as well known form of torture is known as White Room Torture, and involves the victim being secluded in a completely monotone room and is a form of sensory deprivation, the classic asylums padded rooms are very close to what this entails, and yet these places are supposed to help sick people not make them suffer.
+	</p>
+<br><br><br><br>
+	<p>
+		On the other side of the spectrum, we can think of playing off human morality as torture, yet can be used to great effect to gain information that is also truthfull. Taking a subject and stacking some sort of deliemma that puts their views into question can be seen as torture, however it can be what would be called "empty threats" the idea of "if specified responce/action is not recieved then specified consiquences will happen and it will be on subjects shoulders" can quickly cause any with some morals to give in, the torture comes in the form of guilt and pressure of consiquences.
+	</p>
+	<br><br><br><br>
+	<p>
+		In the end, the question of if torture is ever acceptable really depends on what your deffinition of torture is. The only unquestionable truth about the subject is, that it is an undoubtably cruel method, and no mater what, can have detrimental and long lasting effect on the subject. The origional Geneva Convention law against torture is too vague on the term, and despite the implimentation of the law, there are those who have still found and will find ways to disguise these cruel acts upon their fellow human. 
+	</p>
 </body>
 </html>
