--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ To this end, the following acts are and shall remain prohibited at any time and 
 	</p>
 <br>
 	<p>
-		Let's use an example; one form of torture is actually used even today, however sparingly and is considered punishment rather than torture legaly. This method is easily known as Solitary Confinement, reserved for the most deprived of criminals. However, while considered a punishment, this is in fact a form of torture that can easily be the most damaging to any human, as prolonged Solitary Confinement can lead to mental health issues including psychotic breaks. As humans are a social species, we require interaction, yet we disguise this blatant torture as punishment. This "punishment" can easily induce insanity. Another, not as well known form of torture is known as White Room Torture, and involves the victim being secluded in a completely monotone room and is a form of sensory deprivation, the classic asylums padded rooms are very close to what this entails, and yet these places are supposed to help sick people not make them suffer.
+		Let's use an example; one form of torture is actually used even today, however sparingly and is considered punishment rather than torture legaly. This method is easily known as Solitary Confinement, reserved for the most deprived of criminals. However, while considered a punishment, this is in fact a form of torture that can easily be the most damaging to any human, as prolonged Solitary Confinement can lead to mental health issues including psychotic breaks. As humans are a social species, we require interaction, yet we disguise this blatant torture as punishment. This "punishment" can easily induce insanity. Another, not as well known form of torture is known as White Room Torture.
+		<img src="images/White room.jpg">
+		This involves the victim being secluded in a completely monotone room and is a form of sensory deprivation, the classic asylums padded rooms are very close to what this entails, and yet these places are supposed to help sick people not make them suffer.
 	</p>
 <br>
 	<p>
